--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <body>
 
 <p>Hello World!!!1</p>
-<a href = "n.html">Click here</a>
+<a href="http://www.w3schools.com">Visit W3Schools</a> 
 </body>
 </html>
